tests/ui/wf/issue-95665.stderr
error[E0277]: the trait bound `u8: Trait` is not satisfied
  --> $DIR/issue-95665.rs:14:17
   |
LL |     static VAR: Struct<u8>;
   |                 ^^^^^^^^^^ the trait `Trait` is not implemented for `u8`
   |
help: this trait has no implementations, consider adding one
  --> $DIR/issue-95665.rs:4:1
   |
LL | pub trait Trait: {}
   | ^^^^^^^^^^^^^^^
note: required by a bound in `Struct`
  --> $DIR/issue-95665.rs:6:22
   |
LL | pub struct Struct<T: Trait> {
   |                      ^^^^^ required by this bound in `Struct`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
